# Armor_Finder_RotatedRect

./: CMakeLists.txt  README.md  To_do.md  hsv_date.md  main.cpp
Video/Transcribe/: CMakeLists.txt  Transcribe.cpp  Transcribe1.cpp
Video/image/src/armor/: image_positive_list.txt
armor/include/armor_finder/: C-color.hpp  MSER.hpp  PNP.hpp  armor_finder.hpp  classifier.hpp  color_filter.hpp  find_armorbox.hpp  find_lightblob.hpp  out_camera_data.xml  proportion_thresh.hpp
armor/include/armor_finder/armor_rect/: MSER.hpp  armorbox_isok.hpp  find_armor.hpp  find_armorbox.hpp  find_lightbox.hpp  lightbox_isok.hpp
armor/include/armor_finder/distance/: PNP.hpp  distance.hpp
armor/include/armor_finder/image_processing/: C-color.hpp  classifier.hpp  color_filter.hpp  quadrilateral_to_mat.hpp  rotate_rect_to_mat.hpp
armor/include/show_images/: show_images.hpp
armor/src/FOCI/: FOCI.cpp
armor/src/MSER/: MSER.cpp
armor/src/camera_calibration/: CMakeLists.txt  camera_calibration.cpp  make_camera_calibration.cpp
armor/src/camera_calibration/Camera_calibration_files/: calibdata.txt  calibration.txt
armor/src/center_of_a_blod/: CMakeLists.txt  README.md  blob_center.cpp
armor/src/classifier/: CMakeLists.txt  README.md  classifier.cpp  classifier.hpp
armor/src/classifier/image_files/: image_negative_list.txt  image_positive_list.txt  template_file.txt
armor/src/select_a_bounding_box_ROI/: CMakeLists.txt  README.md  bounding_box.cpp
armor/src/show_images/: show_images.cpp
other/include/: drawText.hpp  drawText_quadrilateral.hpp  timer.hpp
